# amail

./: CMakeLists.txt
src/core/: CMakeLists.txt  common.h  config.c  config.h  hooks.c  hooks.h  main.c  modules.c  modules.h  test.cfg
src/modules/: CMakeLists.txt
src/modules/db/: CMakeLists.txt
src/modules/db/textconfig/: CMakeLists.txt  textconfig.c
src/modules/outbound/: CMakeLists.txt
src/modules/outbound/aso/: CMakeLists.txt  aso.c
src/modules/outbound/bso/: CMakeLists.txt  bso.c
src/modules/outbound/fbox/: CMakeLists.txt  fbox.c
src/modules/outbound/lbox/: CMakeLists.txt  lbox.c
