cmake_minimum_required(VERSION 2.8)
project(amail C)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB REQUIRED glib-2.0 gmodule-2.0)
include_directories(SYSTEM ${GLIB_INCLUDE_DIRS})
link_directories(${GLIB_LIBRARY_DIRS})
ADD_DEFINITIONS(-ggdb)
ADD_DEFINITIONS(-Wall)
option(ENABLE_TEXTCONFIG "Build plugin TextConfig" ON)
option(ENABLE_BSO "Build plugin BSO" ON)
option(ENABLE_ASO "Build plugin ASO" ON)
option(ENABLE_FBOX "Build plugin FBOX" ON)
option(ENABLE_LBOX "Build plugin LBOX" ON)
add_subdirectory(src)
message("DB plugins:")
if (ENABLE_TEXTCONFIG)
    message("\ttextconfig\tyes")
else()
    message("\ttextconfig\tno")
endif()
message("Outbound plugins:")
if (ENABLE_BSO)
    message("\tBSO\t\tyes")
else()
    message("\tBSO\t\tno")
endif()
if (ENABLE_ASO)
    message("\tASO\t\tyes")
else()
    message("\tASO\t\tno")
endif()
if (ENABLE_FBOX)
    message("\tFBOX\t\tyes")
else()
    message("\tFBOX\t\tno")
endif()
if (ENABLE_LBOX)
    message("\tLBOX\t\tyes")
else()
    message("\tLBOX\t\tno")
endif()
